# programmiersprachen-raytracer

framework/: box.cpp  box.hpp  image.cpp  image.hpp  point2d.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  vec2.hpp  vectorcar.cpp  vectorcar.hpp
source/: CMakeLists.txt  tests.cpp
